syntax = "proto3";

option csharp_namespace = "Exchange.gRPCServer.Protos";

service CurrencyFileStreaming 
{
  rpc UploadFile (stream FileChunk) returns (UploadStatus);
}

message FileChunk {
   bytes content = 1;
   string fileName = 2;
   int64 fileSize = 3;
}

message UploadStatus  {
  bool success = 1;
  string message = 2;
}